5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1680_1932.log
== TEST (2019-05-09 16:15:17) 
-- CODE:
a=float(input("distância entre os olhos(face 1): "))
b=float(input("distância entre o nariz e o queixo(face 1): "))
c=float(input("distância entre os olhos(face 2): "))
d=float(input("distância entre o nariz e o queixo(face 2): "))
e=float(input("distância entre os olhos(face 3): "))
f=float(input("distância entre o nariz e o queixo(face 3): "))

f1=a/b
f2=c/d
f3=e/f
r1=abs(f1)
r2=abs(f2)
r3=abs(f3)
print(r1)
if(r1==r2):
	

-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:15:25) 
-- CODE:
a=float(input("distância entre os olhos(face 1): "))
b=float(input("distância entre o nariz e o queixo(face 1): "))
c=float(input("distância entre os olhos(face 2): "))
d=float(input("distância entre o nariz e o queixo(face 2): "))
e=float(input("distância entre os olhos(face 3): "))
f=float(input("distância entre o nariz e o queixo(face 3): "))

f1=a/b
f2=c/d
f3=e/f
r1=abs(f1)
r2=abs(f2)
r3=abs(f3)
print(r1)
#if(r1==r2):
	

-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:15:46) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
f2=c/d
f3=e/f
r1=abs(f1)
r2=abs(f2)
r3=abs(f3)
print(r1)
#if(r1==r2):
	

-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:14) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
f2=c/d
f3=e/f
r1=abs(f1)
r2=abs(f2)
r3=abs(f3)
print(f1)
#if(r1==r2):
	

-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:51) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))


f1=a/b
f2=c/d
f3=e/f
r1=abs(f1)
r2=abs(f2)
r3=abs(f3)
print(r1)
#if(r1==r2):
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    f2=c/d
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:08) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))


f1=a/b

r1=abs(f1)

print(r1)
#if(r1==r2):
	

-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:18) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))


f1=a/b

r1=abs(f1)

print(abs(r1)
#if(r1==r2):
	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:21) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))


f1=a/b

r1=abs(f1)

print(abs(r1))
#if(r1==r2):
	

-- OUTPUT:
1.0634920634920635
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:18) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)
print(s)
f2=c/d
d=round(f2,2)
f3=e/f
w=round(f3,2)
if(abs(f1-f3)==0.01):
	print("1 e 3")
	
-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:10) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)
print(s)
f2=c/d
d=round(f2,2)
f3=e/f
w=round(f3,2)
if(abs(s-w)==0.01):
	print("1 e 3")
	
-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:10) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

if(abs(s-w)==0.01):
	print("1 e 3")
	
-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:16) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=abs(s-w)

if(c1==0.01):
	print("1 e 3")
	
-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:47) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=abs(s-w)

if(c1==0.01):
	print("1 e 3")
else:
	print("errado")
	
-- OUTPUT:
errado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:52) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=round(abs(s-w),2)

if(c1==0.01):
	print("1 e 3")
else:
	print("errado")
	
-- OUTPUT:
errado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:18) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=round(abs(f3-f1),2)

if(c1==0.01):
	print("1 e 3")
else:
	print("errado")
	
-- OUTPUT:
errado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:33) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=round(abs(f1-f3),2)

if(c1==0.01):
	print("1 e 3")
else:
	print("errado")
	
-- OUTPUT:
errado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:46) 
-- CODE:
a=float(input("distancia entre os olhos(face 1): "))
b=float(input("distancia entre o nariz e o queixo(face 1): "))
c=float(input("distancia entre os olhos(face 2): "))
d=float(input("distancia entre o nariz e o queixo(face 2): "))
e=float(input("distancia entre os olhos(face 3): "))
f=float(input("distancia entre o nariz e o queixo(face 3): "))

f1=a/b
s=round(f1,2)


f2=c/d
d=round(f2,2)

f3=e/f
w=round(f3,2)

c1=round(abs(s-w),2)

if(c1==0.01):
	print("1 e 3")
else:
	print("errado")
	
-- OUTPUT:
errado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
